--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <h1>Movie Hub</h1>
         <form id="search-form">
-            <input type="text" id="search-input" placeholder="search for a movie" required>
+            <input type="text" id="search-input" placeholder="search for a movie..." required>
             <button type="submit">Search</button>
 
         </form>
